<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cows Are Ruminants</string>
    <string name="action_settings">Settings</string>
    <string name="coming_soon">App coming soon. Stay tuned!</string>
    <string name="next">Next</string>
    <string name="previous">Back</string>

    <string name="intro_title">What is Rumination?</string>
    <string name="worry_tool_title">Worry Practice Tool</string>

    <string name="question_rumination_bool">Are you ruminating?</string>
    <string name="question_rumination_trigger">What happened before the rumination started?</string>
    <string name="question_pre_rumination_feeling">How did you feel at the time?</string>
    <string name="emo_one">Emo1</string>
    <string name="emo_two">Emo2</string>
    <string name="emo_three">Emo3</string>
    <string name="question_rumination_duration">How long did the rumination last?</string>
    <string name="question_rumination_strategy">What did you try?</string>
    <string name="question_strategy_success">What stopped the rumination?</string>

    <string name="recall_wizard_title">Thinking back on it:</string>
    <string name="question_rumination_help">Did ruminating help?</string>
    <string name="question_feel_better">Did you feel better?</string>
    <string name="question_different_strategy">What would you do differently?</string>


    <string name="timer_title">Time Remaining:</string>
    <string name="reset_wpt">Reset</string>
    <string name="start_stop_wpt">Start / Stop</string>
    <string name="show_help">Show How This Helps</string>
    <string name="didactic_content1">didactic_content1</string>
    <string name="question_ruminating">Ruminating? Click here!</string>
    <string name="didactic_content_button">Didactic Content</string>
    <string name="wpt_button">Worry Practice Tool</string>
    <string name="wizards_button">Wizards</string>
    <string name="replay_intro_button">Replay Intro</string>
    <string name="replay_intro">Replay Intro</string>
    <string name="tools_title">Tools</string>
    <string name="survey_wizard_title">Rumination Survey</string>

    <string name="hint_comments">Hint</string>

    <string name="label_no">No</string>
    <string name="label_yes">Yes</string>
    <string name="label_a_few_min">A Few Minutes</string>
    <string name="label_thirty_min">30 Minutes</string>
    <string name="label_an_hour">An Hour</string>
    <string name="label_a_few_hours">A Few Hours</string>
    <string name="label_all_day">All Day</string>

    <string name="action_save_survey">Submit</string>
    <string name="action_save_recall">Submit</string>

    <string name="message_complete_rum">Record if you are ruminating now to continue.</string>
    <string name="message_complete_rum_duration">Answer how long your rumination lasted.</string>
    <string name="message_complete_helpful">Record if the rumination was helpful.</string>
    <string name="message_complete_better">Record if the rumination made you feel better.</string>

    <string name="toast_survey_wizard_recorded">Successfully submitted.</string>
    <string name="toast_recall_wizard_recorded">Successfully submitted.</string>

</resources>
