<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="top">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/recall_wizard_instructions"
            android:id="@+id/textView"
            android:layout_weight="1"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:textStyle="italic"
            android:textSize="24sp" />

        <TextView android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_rumination_help"
       android:textColor="#0099cc"
       android:textStyle="bold"
       android:textSize="18sp"
       android:layout_marginLeft="24dp"
       android:layout_marginTop="24dp"
       android:layout_marginBottom="16dp"
       android:layout_marginRight="8dp" />
    <RadioGroup android:id="@+id/radios_rum_helpful"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="8dp">
        <RadioButton android:id="@+id/help_yes"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/label_yes"
            android:textSize="18sp" />
        <RadioButton android:id="@+id/help_no"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/label_no"
            android:textSize="18sp" />
    </RadioGroup>
       <TextView android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_feel_better"
           android:textColor="#0099cc"
           android:textStyle="bold"
           android:textSize="18sp"
           android:layout_marginLeft="24dp"
           android:layout_marginTop="0dp"
           android:layout_marginBottom="16dp"
           android:layout_marginRight="8dp" />
    <RadioGroup android:id="@+id/radios_feel_better"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="8dp"
        android:layout_gravity="center_horizontal">
        <RadioButton android:id="@+id/better_yes"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/label_yes"
            android:textSize="18sp"
            android:layout_gravity="right"
            android:checked="false" />
        <RadioButton android:id="@+id/better_no"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/label_no"
            android:textSize="18sp" />
    </RadioGroup>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_different_strategy"
        android:textColor="#0099cc"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="8dp" />
    <EditText android:id="@+id/field_different_strategy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="8dp"
        android:inputType="text"
        android:singleLine="false"
        android:hint="@string/hint_comments"/>
    </LinearLayout>
</ScrollView>